// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox > Snapshot testing > should not show label 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:hidden ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_a_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-invalid="false"
        aria-label="Label"
        aria-required="false"
        class="ds:font-arial ds:w-full ds:rounded-l-md ds:border-y ds:border-l ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:outline-hidden ds:placeholder:text-inactive-gray ds:disabled:text-inactive-gray ds:disabled:pointer-events-none"
        data-headlessui-state=""
        id="_r_a_"
        placeholder="(placeholder text)"
        role="combobox"
        type="text"
        value="Suomi"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded-r-md ds:border-y ds:border-r ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray"
        data-headlessui-state=""
        id="headlessui-combobox-button-_r_g_"
        tabindex="-1"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Combobox > Snapshot testing > should render as disabled 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_k_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-disabled=""
      data-headlessui-state="disabled"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-invalid="false"
        aria-required="false"
        class="ds:font-arial ds:w-full ds:rounded-l-md ds:border-y ds:border-l ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:outline-hidden ds:placeholder:text-inactive-gray ds:disabled:text-inactive-gray ds:disabled:pointer-events-none"
        data-disabled=""
        data-headlessui-state="disabled"
        disabled=""
        id="_r_k_"
        placeholder="(placeholder text)"
        role="combobox"
        type="text"
        value="Suomi"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded-r-md ds:border-y ds:border-r ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray"
        data-disabled=""
        data-headlessui-state="disabled"
        disabled=""
        id="headlessui-combobox-button-_r_q_"
        tabindex="-1"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Combobox > Snapshot testing > should render with defaults 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_0_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-invalid="false"
        aria-required="false"
        class="ds:font-arial ds:w-full ds:rounded-l-md ds:border-y ds:border-l ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:outline-hidden ds:placeholder:text-inactive-gray ds:disabled:text-inactive-gray ds:disabled:pointer-events-none"
        data-headlessui-state=""
        id="_r_0_"
        placeholder="(placeholder text)"
        role="combobox"
        type="text"
        value="Suomi"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded-r-md ds:border-y ds:border-r ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray"
        data-headlessui-state=""
        id="headlessui-combobox-button-_r_6_"
        tabindex="-1"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
